--- a/src/app/tabs/blog/blog.page.html
+++ b/src/app/tabs/blog/blog.page.html
@@ -37,7 +37,7 @@
   </ion-searchbar>
 
   <!-- Sección de Artículo Destacado -->
-  <ion-card class="featured-article">
+  <ion-card class="featured-article" *ngIf="featuredPost">
     <img src="assets/img/featured.png" alt="Artículo Destacado" />
     <ion-card-header>
       <ion-card-subtitle>Destacado</ion-card-subtitle>
